# Lambda-Calculus-Implementation

./: .gitignore  Makefile  README.md  hask-lambda.cabal  lambda-cube.cabal
docs/: Main.html  Nat.html  PLF.key  Parser.html  Reduction.html  Substitution.html  Term.html  doc-index.html  final_report.bib  final_report.tex  index.html  project_proposal.tex
src/: Context.hs  LNParser.hs  LNTerm.hs  LambdaTerm.hs  LegacyPure.hs  Main.hs  Nat.hs  Parser.hs  Parsing.hs  Pure.hs  Reduction.hs  STLNTerm.hs  SimpleTypes.hs  Substitution.hs  Term.hs  eval.hs  examples.hs  main  main.hs  nat.hs  parser.hs  posint.hs  prettyPrinter.hs  reduction.hs  subst.hs  term.hs  to-latex.hs  toLatex.hs
src/LegacyPure/: Parser.hs  Term.hs
src/Parsing/: ParseableContext.hs  ParseableTerm.hs
src/Pure/: Parser.hs  Term.hs
src/SimpleTypes/: Context.hs  Parser.hs  Term.hs  Type.hs  TypingError.hs
