name:                hask-lambda
version:             0.1.0.0
synopsis:            Lambda calculus implementation
-- description:         
license:             MIT
license-file:        LICENSE
author:              Chad Reynolds
maintainer:          cjreynol13@aol.com
stability:           experimental
copyright:           (c) 2016-2018 Chad Reynolds
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
    type:           git
    location:       git://github.com/Cjreynol/Lambda-Calculus-Implementation.git

executable hask-lambda
  main-is:             Main.hs
  
  other-modules:        LambdaTerm,
                        LNTerm,
                        Nat,
                        Parser
  
  -- other-extensions:    
  
  build-depends:       base >=4.10 && <4.11, parsec >=3.1 && <3.2
  
  hs-source-dirs:      src
  
  default-language:    Haskell2010

  ghc-options: -Wall

