name:                lambda-cube
version:             0.4.0.0
synopsis:            Implementation of the lambda cube calculi
description:         An in-progress implementation of the 8 calculi of the 
                        lambda cube and pure lambda calculus.  The goal is to 
                        formulate each of the corners branching off from STLC 
                        in a way that the remaining corners are formed from 
                        composing the previous pieces rather than duplicating 
                        and extending.
license:             MIT
license-file:        LICENSE
author:              Chad Reynolds
maintainer:          cjreynol13@aol.com
stability:           experimental
copyright:           (c) 2016-2018 Chad Reynolds
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
    type:           git
    location:       git://github.com/Cjreynol/Lambda-Calculus-Implementation.git

executable lambda-parser
  main-is:              Main.hs
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall

  other-modules:        Context
                        LambdaTerm
                        Nat
                        Parsing.ParseableContext
                        Parsing.ParseableTerm
                        SimpleTypes.Parser
                        SimpleTypes.Term
                        SimpleTypes.Type
                        SimpleTypes.TypingError

  build-depends:        base >=4.11 && <4.12, parsec >=3.1 && <3.2, 
                        containers >=0.5.10.2

library 
    exposed-modules:    Context,
                        LambdaTerm,
                        Nat,
                        Parsing
                        Pure,
                        SimpleTypes,
                        Parsing.ParseableContext,
                        Parsing.ParseableTerm,
                        Pure.Parser,
                        Pure.Term,
                        SimpleTypes.Examples,
                        SimpleTypes.Parser,
                        SimpleTypes.Term,
                        SimpleTypes.Type,
                        SimpleTypes.TypingError

    build-depends:      base >=4.11 && <4.12, parsec >=3.1 && <3.2, 
                        containers >=0.5.10.2
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -Wall
