name:                   lambda-cube
version:                0.4.0.0
cabal-version:          >= 1.12
build-type:             Simple
license:                MIT
license-file:           LICENSE
copyright:              (c) 2016-2018 Chad Reynolds
author:                 Chad Reynolds
maintainer:             cjreynol13@aol.com
stability:              experimental
homepage:               https://github.com/Cjreynol/Lambda-Calculus-Implementation
bug-reports:            https://github.com/Cjreynol/Lambda-Calculus-Implementation/issues
synopsis:               Implementation of the lambda cube calculi
description:            An in-progress implementation of the 8 calculi of the 
                        lambda cube and pure lambda calculus.  The goal is to 
                        formulate each of the corners branching off from STLC 
                        in a way that the remaining corners are formed from 
                        composing the previous pieces rather than duplicating 
                        and extending.

category:               Language
tested-with:            GHC == 8.4.3
extra-source-files:     README.md


source-repository head
    type:               git
    location:           git://github.com/Cjreynol/Lambda-Calculus-Implementation.git

library 
    exposed-modules:      Context
                        , LambdaTerm
                        , Nat
                        , Parsing
                        , SimpleTypes
                        , Parsing.ParseableContext
                        , Parsing.ParseableTerm
                        , SimpleTypes.Examples
                        , SimpleTypes.Term
                        , SimpleTypes.Type

    build-depends:        base          >= 4.11 && < 4.12
                        , containers    >= 0.5  && < 0.6
                        , parsec        >= 3.1  && < 3.2
    hs-source-dirs:     src
    default-language:   Haskell2010
    ghc-options:        -Wall 
                        -Wcompat 
                        -Wincomplete-uni-patterns 
                        -Wincomplete-record-updates 
                        -- -Wmissing-import-lists

executable lambda-parser
    main-is:            Main.hs
    build-depends:        base          >= 4.11 && < 4.12
                        , containers    >= 0.5  && < 0.6
                        , parsec        >= 3.1  && < 3.2
                        , lambda-cube   >= 0.4  && < 0.5
    hs-source-dirs:     src
    default-language:   Haskell2010
    other-modules:      Context
                        LambdaTerm
                        Nat
                        Parsing
                        SimpleTypes
                        Parsing.ParseableContext
                        Parsing.ParseableTerm
                        SimpleTypes.Examples
                        SimpleTypes.Term
                        SimpleTypes.Type
    ghc-options:        -Wall 
                        -Wcompat 
                        -Wincomplete-uni-patterns 
                        -Wincomplete-record-updates 
                        -- -Wmissing-import-lists

